--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         min-width: 100vw;
         scroll-snap-align: start;
         border-radius: 0;
-        margin-top: 44px;
+        margin-top: 5vh;
         height: calc(100vh - 70px - 70px);
         overflow-y: auto;
         padding: 1.5rem 1rem 1rem 1rem;
@@ -1326,11 +1326,10 @@
         <button class="speed-btn active" id="playBtn" title="Play game">▶ Play (1x)<span style="font-size: 0.7rem; opacity: 0.7;">(Space)</span></button>
         <button class="speed-btn" id="speed2xBtn" title="Play at 2x speed">2x</button>
         <button class="speed-btn" id="speed5xBtn" title="Play at 5x speed">5x</button>
-        <button class="speed-btn" id="speed10xBtn" title="Play at 10x speed">10x</button>
       </div>
       <div class="game-controls">
-        <button class="game-ctrl-btn" id="saveBtn" title="Save game to browser storage">💾 Save</button>
-        <button class="game-ctrl-btn reset-btn" id="resetBtn" title="Reset and start a new game">🔄 Reset</button>
+        <button class="game-ctrl-btn" id="saveBtn" title="Save game to browser storage">Save</button>
+        <button class="game-ctrl-btn reset-btn" id="resetBtn" title="Reset and start a new game">Reset</button>
       </div>
     </div>
   </div>
@@ -2888,7 +2887,6 @@
         if (gameSpeed === 1) document.getElementById('playBtn').classList.add('active');
         else if (gameSpeed === 2) document.getElementById('speed2xBtn').classList.add('active');
         else if (gameSpeed === 5) document.getElementById('speed5xBtn').classList.add('active');
-        else if (gameSpeed === 10) document.getElementById('speed10xBtn').classList.add('active');
       }
     }
 
@@ -4037,16 +4035,6 @@
         localStorage.setItem('softwareCompanyGame', JSON.stringify(saveData));
         logEvent("💾 Game saved!");
         
-        // Visual feedback
-        const saveBtn = document.getElementById('saveBtn');
-        const originalText = saveBtn.innerHTML;
-        saveBtn.innerHTML = '✅ Saved!';
-        saveBtn.style.background = 'rgba(16, 185, 129, 0.4)';
-        setTimeout(() => {
-          saveBtn.innerHTML = originalText;
-          saveBtn.style.background = 'rgba(255,255,255,0.2)';
-        }, 2000);
-        
         return true;
       } catch (e) {
         logEvent("❌ Failed to save game: " + e.message);
@@ -4263,7 +4251,6 @@
       document.getElementById('playBtn').addEventListener('click', () => { setGameSpeed(1); startGame(); });
       document.getElementById('speed2xBtn').addEventListener('click', () => { setGameSpeed(2); startGame(); });
       document.getElementById('speed5xBtn').addEventListener('click', () => { setGameSpeed(5); startGame(); });
-      document.getElementById('speed10xBtn').addEventListener('click', () => { setGameSpeed(10); startGame(); });
 
       // Game controls
       document.getElementById('saveBtn').addEventListener('click', () => saveGame());
