--- a/index.html
+++ b/index.html
@@ -6247,7 +6247,7 @@
           const gainedEfficiency = experienceMonths * EXPERIENCE_RATE;
           currentEfficiency = Math.min(founder.baseEfficiency + gainedEfficiency, founder.efficiencyCap);
           progressPercent = ((currentEfficiency - 1.0) / (founder.efficiencyCap - 1.0)) * 100;
-          nextTierName = '400% Efficiency';
+          nextTierName = 'Mastery';
           isMaxLevel = currentEfficiency >= founder.efficiencyCap;
         } else {
           const tiers = emp.role === 'developer' ? DEVELOPER_TIERS : MARKETER_TIERS;
