--- a/index.html
+++ b/index.html
@@ -754,6 +754,8 @@
       max-height: 85vh;
       overflow-y: auto;
       box-shadow: 0 20px 25px rgba(0,0,0,0.3);
+      position: relative;
+      top: -45px;
     }
     
     .modal-header {
@@ -2249,7 +2251,6 @@
     <div class="modal">
       <div class="modal-header">🔨 Create New Product</div>
       <div class="modal-body">
-        <div class="modal-intro">Products have different development time, lifetime, and pricing.</div>
         <div class="scrollable-list" id="productTemplatesList"></div>
       </div>
       <div class="modal-footer">
